--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -1,17 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <string name="app_name">Customer Portal</string>
+    <string name="app_name">mCP</string>
     <string name="navigation_drawer_open">Open navigation drawer</string>
     <string name="navigation_drawer_close">Close navigation drawer</string>
     <string name="openDrawer">open_drawer</string>
     <string name="closeDrawer">close_drawer</string>
-    
     <string name="keyMap_Dev">AIzaSyCO77nVxrBDTUPmjzPV9Zw1mUdMB9y3fkU</string>
 
     <!-- Navigation Drawer menu labels -->
     <string name="nav_home">Trang chủ</string>
-    <string name="nav_infoGeneral">Thông tin sản phẩm</string>
+    <string name="nav_infoGeneral">Thông tin chung</string>
+    <string name="nav_infoProduct">Thông tin sản phẩm</string>
     <string name="nav_infoContract">Thông tin hợp đồng</string>
     <string name="nav_bonusProgram">Chương trình điểm thưởng</string>
     <string name="nav_fundPrice">Giá đơn vị quỹ</string>
@@ -21,11 +21,12 @@
     <string name="nav_notifications">Thông báo</string>
     <string name="nav_settings">Cài đặt</string>
     <string name="nav_logout">Đăng xuất</string>
-    <string name="nav_about_us">About Us</string>
+    <string name="nav_about_us">Hướng dẫn sử dụng</string>
 
     <!-- Toolbar titles when navigation menu item is selected -->
     <string-array name="nav_item_activity_titles">
         <item>Trang chủ</item>
+        <item>Thông tin chung</item>
         <item>Thông tin sản phẩm</item>
         <item>Thông tin hợp đồng</item>
         <item>Chương trình điểm thưởng</item>
@@ -38,20 +39,21 @@
         <item>Đăng xuất</item>
     </string-array>
 
-    <string name="activity_title_about_us">About Us</string>
+    <string name="activity_title_about_us">Hướng dẫn sử dụng</string>
     <string name="activity_title_list_office">Mạng lưới văn phòng</string>
-    <string name="activity_title_privacy_policy">Privacy Policy</string>
-    
-    <string name="action_clear_all">Clear All</string>
-    <string name="action_logout">Logout</string>
-    <string name="action_mark_all_read">Mark All as Read</string>
-    <string name="privacy_policy">Privacy Policy</string>
+    <string name="activity_title_contract_detail">Chi tiết hợp đồng</string>
+    <string name="activity_title_privacy_policy">Chính sách bảo mật</string>
+    <string name="action_clear_all">Xóa hết</string>
+    <string name="action_logout">Đăng xuất</string>
+    <string name="action_call">Liên hệ</string>
+    <string name="action_mark_all_read">Đánh dấu đã đọc</string>
+    <string name="privacy_policy">Chính sách bảo mật</string>
 
     <!-- Request Permission -->
     <string name="permission_info">Ứng dụng cần cấp quyền truy cập bộ nhớ máy.</string>
     <string name="permission_force">Ứng dụng cần cấp quyền xem hình ảnh của bạn. Chọn Settings và đi đến mục Permissions để cấp quyền.</string>
     <string name="permission_ok">OK</string>
-    <string name="permission_settings">Settings</string>
+    <string name="permission_settings">Hệ thống</string>
     <string name="permission_package">package</string>
     <string name="confirm_yes">Yes</string>
     <string name="confirm_no">No</string>
@@ -62,11 +64,11 @@
     <string name="low_memory">Low memory</string>
     <string name="message_alert_login_to_using_function">Anh/chị cần phải đăng nhập để sử dụng chức năng này.</string>
     <string name="message_alert_logout">Anh/chị có thật sự muốn thoát khỏi chương trình này không ?.</string>
+    <string name="message_alert_download_file">Anh/chị có muốn download tập tin này không ?</string>
     <string name="alert_input_payment">Anh/chị cần phải nhập số tiền và chọn phương thức thanh toán.</string>
     
     <string name="home_welcome_user">Anh/chị có thể dễ dàng tra cứu thông tin hợp đồng bảo hiểm nhân thọ, thông tin điểm thưởng tích lũy của mình.</string>
     <string name="home_welcome_guest">Đến với cổng thông tin khách hàng của Dai-Ichi-Life Việt Nam, vui lòng đăng nhập để sử dụng đầy đủ chức năng.</string>
-    
     <string name="home_welcom_article">
 <![CDATA[<strong><b>CHÀO MỪNG QUÝ KHÁCH ĐẾN VỚI "CỔNG THÔNG TIN KHÁCH HÀNG" !</b></strong> <br>
 
@@ -89,5 +91,9 @@ Trân trọng kính chào,<br>
     <string name="title_activity_web_napas">WebNapasActivity</string>
     <string name="title_activity_profile">Thông tin cá nhân</string>
     <string name="title_activity_contract_detail">ContractDetailActivity</string>
+    <string name="title_activity_contact">Liên hệ</string>
+    <string name="title_activity_bonus__nop_phi_bh">Nộp phí/ Hoàn trả</string>
+    
+    <string name="non_spinner">Chọn</string>
 
 </resources>
